--- a/Client/Restaurant.Client/Restaurant/Pages/Welcome/SignUpPage.xaml
+++ b/Client/Restaurant.Client/Restaurant/Pages/Welcome/SignUpPage.xaml
@@ -17,7 +17,7 @@
             <Image Source="ic_account.png" HeightRequest="25" Grid.Column="0" WidthRequest="25"
                    VerticalOptions="Center"></Image>
 
-            <controls:RestaurantEntry x:Name="RegesterName" Text="{Binding Name}" Placeholder="Enter your name"
+            <controls:RestaurantEntry x:Name="RegesterName" Text="{Binding UserName}" Placeholder="User name"
                                       Grid.Column="1" VerticalOptions="Center" HorizontalOptions="FillAndExpand" HasBorder="False"/>
           </Grid>
           <ContentView BackgroundColor="{StaticResource indigoPrimary}" HorizontalOptions="Fill" >
@@ -39,7 +39,7 @@
             <Image Source="ic_email.png" HeightRequest="25" Grid.Column="0" WidthRequest="25"
                    VerticalOptions="Center"></Image>
 
-            <controls:RestaurantEntry x:Name="RegesterEmail" Text="{Binding RegesterEmail}" Placeholder="Enter your email"
+            <controls:RestaurantEntry x:Name="RegesterEmail" Text="{Binding Email}" Placeholder="Email"
                                       Grid.Column="1" VerticalOptions="Center" HorizontalOptions="FillAndExpand" HasBorder="False"/>
           </Grid>
           <ContentView BackgroundColor="{StaticResource indigoPrimary}" HorizontalOptions="Fill" >
@@ -60,7 +60,7 @@
             </Grid.ColumnDefinitions>
             <Image Source="ic_key_variant.png" Grid.Column="0" WidthRequest="25" HeightRequest="25" VerticalOptions="Center"></Image>
             <controls:RestaurantEntry HasBorder="False" x:Name="RegesterPassword" Placeholder="Password" Grid.Column="1"
-                                      HorizontalOptions="FillAndExpand" IsPassword="true" Text="{Binding RegesterPassword}"/>
+                                      HorizontalOptions="FillAndExpand" IsPassword="true" Text="{Binding Password}"/>
           </Grid>
           <ContentView BackgroundColor="{StaticResource indigoPrimary}" HorizontalOptions="Fill" >
             <ContentView.HeightRequest>
@@ -71,27 +71,6 @@
             </ContentView.HeightRequest>
           </ContentView>
         </StackLayout>
-
-        <StackLayout Orientation="Vertical" Padding="15">
-          <Grid>
-            <Grid.ColumnDefinitions>
-              <ColumnDefinition Width="Auto"/>
-              <ColumnDefinition Width="*"/>
-            </Grid.ColumnDefinitions>
-            <Image Source="ic_key_variant.png" Grid.Column="0" WidthRequest="25" HeightRequest="25" VerticalOptions="Center"></Image>
-            <controls:RestaurantEntry HasBorder="False" x:Name="RegesterConfirmPassword" Placeholder="Confirm password" Grid.Column="1"
-                                      HorizontalOptions="FillAndExpand" IsPassword="true" Text="{Binding ConfirmPassword}"/>
-          </Grid>
-          <ContentView BackgroundColor="{StaticResource indigoPrimary}" HorizontalOptions="Fill" >
-            <ContentView.HeightRequest>
-              <OnPlatform x:TypeArguments="x:Double">
-                  <On Platform="Android">0</On>
-                  <On Platform="iOS">1</On>
-              </OnPlatform>
-            </ContentView.HeightRequest>
-          </ContentView>
-        </StackLayout>
-
 
         <StackLayout Padding="15">
           <controls:AnimateButton x:Name="Regester" Text="Sign Up" Command="{Binding Regester}"  WidthRequest="300" HorizontalOptions="Center"/>
