--- a/Client/Restaurant.Client/Restaurant/Pages/FoodsPage.xaml
+++ b/Client/Restaurant.Client/Restaurant/Pages/FoodsPage.xaml
@@ -5,22 +5,23 @@
              xmlns:local="clr-namespace:Restaurant.Pages;assembly=Restaurant"
              xmlns:views="clr-namespace:Restaurant.Views;assembly=Restaurant"
              xmlns:converters="clr-namespace:Restaurant.Converters;assembly=Restaurant"
+             xmlns:controls="clr-namespace:Restaurant.Controls;assembly=Restaurant"
              BackgroundColor="{StaticResource WindowBackgroundTable}">
-  
   <local:FoodsPage.Resources>
     <ResourceDictionary>
-      <converters:InverseBoolConverter x:Key="InverseBoolConverter"/> 
+      <converters:InverseBoolConverter x:Key="InverseBoolConverter"/>
     </ResourceDictionary>
   </local:FoodsPage.Resources>
   <local:FoodsXamlPage.ToolbarItems>
-    <ToolbarItem Text="{Binding MainViewModel.BasketViewModel.OrdersCount, StringFormat='Basket(\{0\})'}" ClassId="basket" Command="{Binding OpenOrder}" x:Name="orderToolbar"/>
+    <controls:BadgeToolbarItem Icon="ic_shopping_cart_white" BadgeText="{Binding BasketViewModel.OrdersCount}"></controls:BadgeToolbarItem>
+    <!--<ToolbarItem Text="{Binding MainViewModel.BasketViewModel.OrdersCount, StringFormat='Basket(\{0\})'}" ClassId="basket" Command="{Binding OpenOrder}" x:Name="orderToolbar"/>-->
   </local:FoodsXamlPage.ToolbarItems>
   <local:FoodsXamlPage.Content>
     <Grid>
       <views:FoodsListView ItemsSource="{Binding Foods}" IsVisible="{Binding IsLoading, Converter={StaticResource InverseBoolConverter}}"
                            SelectedItem="{Binding SelectedFood}"
                            x:Name="FoodsList" />
-      
+
       <StackLayout IsVisible="{Binding IsLoading}" HorizontalOptions="Center" VerticalOptions="Center">
         <ActivityIndicator  IsRunning="{Binding IsLoading}" Color="{StaticResource grayDark}" HorizontalOptions="Center"
                             VerticalOptions="EndAndExpand" />
