--- a/Client/Restaurant.Client/Restaurant/Pages/BasketPage.xaml
+++ b/Client/Restaurant.Client/Restaurant/Pages/BasketPage.xaml
@@ -3,56 +3,48 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Restaurant.Pages.BasketPage"
              xmlns:local="clr-namespace:Restaurant.Pages;assembly=Restaurant"
+             xmlns:controls="clr-namespace:Restaurant.Controls;assembly=Restaurant"
              xmlns:imagecontrol="clr-namespace:ImageCircle.Forms.Plugin.Abstractions;assembly=ImageCircle.Forms.Plugin.Abstractions"
+             xmlns:views="clr-namespace:Restaurant.Views;assembly=Restaurant"
              BackgroundColor="{StaticResource WindowBackground}">
 
   <local:BasketPageXaml.Content>
     <Grid>
       <Grid.RowDefinitions>
-        <RowDefinition Height="Auto"/>
         <RowDefinition Height="*"/>
         <RowDefinition Height="Auto"/>
       </Grid.RowDefinitions>
-      <Grid Grid.Row="0">
-        <StackLayout HorizontalOptions="Start" Padding="10, 25" Orientation="Horizontal">
-          <Button  TextColor="White" BackgroundColor="Transparent" WidthRequest="30" Command="{Binding DoneCommand}" Image="ic_close_black_24dp.png"/>
-        </StackLayout>
-
-        <!--<StackLayout HorizontalOptions="Start" Margin="15, 25">
-          <Label Text="Total"/>
-          <Label Text="Rs. 1200" FontSize="Large"/>
-        </StackLayout>-->
-
-      </Grid>
-      <StackLayout Grid.Row="1" Padding="0,18,0,0">
-        <StackLayout Padding="10">
-          <Label Text="Your orders:" Style="{StaticResource header}"></Label>
-        </StackLayout>
-        <ListView SeparatorColor="{StaticResource grayLight}" x:Name="orders" ItemsSource="{Binding Orders}" RowHeight="65">
+      <StackLayout Grid.Row="0">
+        <ListView x:Name="orders" ItemsSource="{Binding Orders}" SeparatorColor="{StaticResource grayPrimary}" RowHeight="100">
           <ListView.ItemTemplate>
             <DataTemplate>
               <ViewCell>
                 <ViewCell.View>
                   <Grid StyleId="ordersRoot">
-                    <StackLayout Padding="24,16,16,16" Spacing="20" Orientation="Horizontal" VerticalOptions="Center">
+                    <Grid.ColumnDefinitions>
+                      <ColumnDefinition Width="Auto"/>
+                      <ColumnDefinition Width="*"/>
+                      <ColumnDefinition Width="Auto"/>
+                    </Grid.ColumnDefinitions>
 
-                      <StackLayout Spacing="20" Orientation="Horizontal">
-                        <AbsoluteLayout HorizontalOptions="Start" VerticalOptions="Center">
-                          <imagecontrol:CircleImage WidthRequest="50" HeightRequest="50" Source="{Binding Food.Picture}"
-                            HorizontalOptions="Center" VerticalOptions="Center" Aspect="AspectFill"
-                            AbsoluteLayout.LayoutFlags="PositionProportional" AbsoluteLayout.LayoutBounds=".5,.5,-1,-1" />
-                        </AbsoluteLayout>
+                    <imagecontrol:CircleImage WidthRequest="60" Margin="10"
+                                              BorderColor="{StaticResource grayPrimary}"
+                                              BorderThickness="1"
+                                              HeightRequest="60" Source="{Binding Food.Picture}"
+                                              HorizontalOptions="Center"
+                                              VerticalOptions="Center"
+                                              Aspect="AspectFill" />
 
-                        <StackLayout Spacing="0" VerticalOptions="Center">
-                          <Label Text="{Binding Food.Name}" FontSize="Medium" LineBreakMode="TailTruncation" TextColor="{StaticResource grayDark}"/>
-                          <Label Text="{Binding Quantity,StringFormat='Quantity \{0\}'}" FontSize="Micro" TextColor="{StaticResource grayPrimary}"  LineBreakMode="TailTruncation" />
-                        </StackLayout>
-                      </StackLayout>
 
-                      <StackLayout HorizontalOptions="EndAndExpand" Spacing="20">
-                        <!--<Label Text="{Binding TotalPrice, StringFormat='Rs. \{0\}'}" FontSize="Medium"  VerticalOptions="Center" TextColor="{StaticResource grayDark}" />-->
+                    <StackLayout Grid.Column="1" VerticalOptions="Center">
+                      <StackLayout Spacing="0" VerticalOptions="Center">
+                        <Label Text="{Binding Food.Name}" Margin="0, 5" FontSize="Medium" LineBreakMode="TailTruncation" TextColor="{StaticResource grayDark}"/>
+                        <Label Text="{Binding Food.Description}" Margin="0, 3" FontSize="Micro" TextColor="{StaticResource grayPrimary}"  LineBreakMode="TailTruncation" />
                       </StackLayout>
                     </StackLayout>
+
+                    <views:VerticalStepperView Grid.Column="2" Margin="10" MinValue="0" Value="{Binding Quantity}"/>
+                   
                   </Grid>
                 </ViewCell.View>
               </ViewCell>
@@ -60,7 +52,7 @@
           </ListView.ItemTemplate>
         </ListView>
       </StackLayout>
-      <StackLayout Grid.Row="2" Padding="10, 5,10,10">
+      <StackLayout Grid.Row="1" Padding="10, 5,10,10">
         <Button Text="Complete your orders"></Button>
       </StackLayout>
     </Grid>
